--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@
     font-family: 'Roboto', sans-serif;
     margin-left: 50px;
     margin-top: 50px;
+    height: 170px;
     margin-right: 50px;
 }
 #testimonials_people{
