--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@
     background-color: white;
     width: 60%;
     border-radius: 25px;
-    height: 500px;
+    height: 520px;
     box-shadow:20px 10px 40px #404040;
 }
 #testimonials_image{
@@ -61,3 +61,18 @@
     width: 60px;
     border-radius: 50%;
 }  
+#testimonials_details{
+    width: 20%;
+    margin-top: 10px;
+    margin-right: 50px;
+    margin-left: 17px;
+}
+#testimonials_name,#testimonials_loc{
+    color: #000000;
+    font-size: 15px;
+    margin-bottom: 2px;
+    font-weight: 500;
+    line-height: 1.2em;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
